switch off filter/predicate for now